[package]
name = "ibc-testkit"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = [ "blockchain", "consensus", "cosmos", "ibc", "tendermint" ]
description = """
    Maintained by `ibc-rs`, serves as a versatile library that provides essential abstractions
    and implementations, fulfilling a dual role of enabling rigorous integration testing for
    the `ibc-rs` implementation while also aiding host chains in addressing a broad spectrum
    of testing scenarios during their integrations with `ibc-rs`.
"""

[dependencies]
# external dependencies
borsh           = { workspace = true, optional = true }
derive_more     = { workspace = true }
displaydoc      = { workspace = true }
parking_lot     = { version = "0.12.3", default-features = false }
schemars        = { workspace = true, optional = true }
serde           = { workspace = true, optional = true }
serde-json      = { workspace = true, optional = true }
subtle-encoding = { workspace = true }
typed-builder   = { version = "0.19.1" }

# ibc dependencies
ibc       = { workspace = true, features = [ "std" ] }
ibc-proto = { workspace = true }
ibc-query = { workspace = true }

# basecoin dependencies
basecoin-store = { version = "0.2.0" }

# cosmos dependencies
tendermint         = { workspace = true }
tendermint-testgen = { workspace = true }

[dev-dependencies]
hex    = { workspace = true }
rstest = { workspace = true }

[features]
default = [ "std" ]
std = [
    "hex/std",
    "serde/std",
    "serde-json/std",
    "ibc/std",
    "ibc-proto/std",
    "tendermint/std",
]
serde = [
    "dep:serde",
    "ibc/serde",
    "ibc-proto/serde",
    "dep:serde-json",
]
schema = [
    "dep:schemars",
    "ibc/schema",
    "ibc-proto/json-schema",
    "serde",
    "std",
]
borsh = [
    "dep:borsh",
    "ibc/borsh",
    "ibc-proto/borsh",
]
parity-scale-codec = [
    "ibc/parity-scale-codec",
    "ibc-proto/parity-scale-codec",
]
