[package]
name = "tests-integration"
version = "0.1.0"
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = [ "blockchain", "consensus", "cosmos", "ibc", "tendermint" ]
publish = false
description = """
    Integration tests that make use of the types exposed by `ibc-testkit`. These tests also
    depend upon the other IBC crates. They live in a separate crate that is not meant to be published
    so as to avoid circular dependencies.
"""

[dependencies]
# external dependencies
serde           = { workspace = true, optional = true }
serde_json      = { workspace = true, optional = true }
subtle-encoding = { workspace = true }
tracing         = { version = "0.1.40", default-features = false }

# ibc dependencies
ibc                         = { workspace = true, features = [ "std", "serde" ] }
ibc-core-client-types       = { workspace = true }
ibc-core-commitment-types   = { workspace = true }
ibc-client-cw               = { workspace = true }
ibc-client-tendermint-cw    = { workspace = true }
ibc-client-tendermint-types = { workspace = true }
ibc-core-host-types         = { workspace = true }
ibc-primitives              = { workspace = true }
ibc-query                   = { workspace = true }
ibc-testkit                 = { workspace = true }

# basecoin dependencies
basecoin-store = { version = "0.1.0" }

# cosmos dependencies
tendermint         = { workspace = true }
tendermint-testgen = { workspace = true }

[dev_dependencies]
cosmwasm-std   = { workspace = true }
hex            = { version = "0.4.2" }
rstest         = { workspace = true }
test-log       = { version = "0.2.13", features = [ "trace" ] }
tendermint-rpc = { workspace = true }
