[package]
name = "no-std-check"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
ibc = { path = "../../ibc", default-features = false, features = ["serde"] }
ibc-proto = { version = "0.41.0", default-features = false, features = [
  "parity-scale-codec",
  "borsh",
  "serde",
] }
cometbft = { version = "0.34", default-features = false }
cometbft-proto = { version = "0.34", default-features = false }
cometbft-light-client-verifier = { version = "0.34", default-features = false, features = ["rust-crypto"] }

sp-core = { version = "28.0.0", default-features = false, optional = true }
sp-io = { version = "30.0.0", default-features = false, optional = true }
sp-runtime = { version = "31.0.1", default-features = false, optional = true }
sp-std = { version = "14.0.0", default-features = false, optional = true }

# The indirect dependency `syn` 2.0.4 has a bug that causes
# compilation errors in `tendermint`. This is fixed in 2.0.5.
# See https://github.com/informalsystems/tendermint-rs/issues/1286
syn = ">=2.0.5"

[features]
panic-handler = []
use-substrate = ["sp-core", "sp-io", "sp-runtime", "sp-std"]
substrate-std = ["sp-core/std", "sp-io/std", "sp-runtime/std", "sp-std/std"]
