[package]
name         = "ibc-clients"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
description  = """
    `ibc-clients` exports the types, handlers, and contexts for implementing Tendermint,
    CosmWasm, and other IBC clients.
"""

[dependencies]