[package]
name         = "ibc-clients"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
keywords     = ["blockchain", "cosmos", "ibc", "applications", "tendermint"]
readme       = "README.md"
description  = """
    `ibc-clients` provides a comprehensive set of libraries for IBC client implementations, 
    facilitating seamless integration of IBC business logic into any blockchain system.
"""

[package.metadata.docs.rs]
all-features = true

[dependencies]
ibc-client-tendermint = { version = "0.47.0", path = "./ics07-tendermint", default-features = false }

[features]
default = ["std"]
std = [
    "ibc-client-tendermint/std",
]
