[package]
name         = "ibc-core"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
keywords     = ["blockchain", "cosmos", "ibc"]
readme       = "README.md"
description  = """
    `ibc-core` provides a comprehensive set of libraries for IBC core (TAO) layers, 
    facilitating seamless integration of IBC business logic into any blockchain system.
"""

[package.metadata.docs.rs]
all-features = true

[dependencies]
ibc-core-client = { workspace = true }
ibc-core-connection = { workspace = true }
ibc-core-channel = { workspace = true }
ibc-core-commitment-types = { workspace = true }
ibc-core-router = { workspace = true }
ibc-core-context = { workspace = true }
ibc-core-host-types = { workspace = true }
ibc-primitives = { workspace = true }
# ibc-core-utils = { workspace = true }

[features]
default = ["std"]
std = [
    "ibc-core-client/std",
    "ibc-core-connection/std",
    "ibc-core-channel/std",
    "ibc-core-commitment-types/std",
    "ibc-core-router/std",
    "ibc-core-context/std",
    "ibc-core-host-types/std",
]
serde = [
    "ibc-core-client/serde",
    "ibc-core-connection/serde",
    "ibc-core-channel/serde",
    "ibc-core-commitment-types/serde",
    "ibc-core-router/serde",
    "ibc-core-context/serde",
    "ibc-core-host-types/serde",
]
borsh = []
schema = []
parity-scale-codec = []