[package]
name         = "ibc-data-types"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
keywords     = ["blockchain", "cosmos", "ibc"]
readme       = "README.md"
description  = """
    TBD
"""

[package.metadata.docs.rs]
all-features = true

[dependencies]
ibc-primitives            = { workspace = true }
ibc-core-client-types     = { workspace = true }
ibc-core-connection-types = { workspace = true }
ibc-core-channel-types    = { workspace = true }
ibc-core-commitment-types = { workspace = true }
ibc-core-host-types       = { workspace = true }
ibc-core-router-types     = { workspace = true }
ibc-core-context-types    = { workspace = true }
ibc-app-transfer-types    = { workspace = true }


[features]
default = ["std"]
std = [
    "ibc-primitives/std",
    "ibc-core-client-types/std",
    "ibc-core-connection-types/std",
    "ibc-core-channel-types/std",
    "ibc-core-commitment-types/std",
    "ibc-core-host-types/std",
    "ibc-core-router-types/std",
    "ibc-core-context-types/std",
    "ibc-app-transfer-types/std",
]
serde = [
    "ibc-primitives/serde",
    "ibc-core-client-types/serde",
    "ibc-core-connection-types/serde",
    "ibc-core-channel-types/serde",
    "ibc-core-commitment-types/serde",
    "ibc-core-host-types/serde",
    "ibc-core-router-types/serde",
    "ibc-core-context-types/serde",
    "ibc-app-transfer-types/serde",
]
borsh = [
    "ibc-primitives/borsh",
    "ibc-core-client-types/borsh",
    "ibc-core-connection-types/borsh",
    "ibc-core-channel-types/borsh",
    "ibc-core-host-types/borsh",
    "ibc-core-router-types/borsh",
    "ibc-core-context-types/borsh",
    "ibc-app-transfer-types/borsh",
]
schema = [
    "ibc-primitives/schema",
    "ibc-core-client-types/schema",
    "ibc-core-connection-types/schema",
    "ibc-core-channel-types/schema",
    "ibc-core-host-types/schema",
    "ibc-core-router-types/schema",
    "ibc-core-context-types/schema",
    "ibc-app-transfer-types/schema",
]
parity-scale-codec = [
    "ibc-core-client-types/parity-scale-codec",
    "ibc-core-connection-types/parity-scale-codec",
    "ibc-core-channel-types/parity-scale-codec",
    "ibc-core-host-types/parity-scale-codec",
    "ibc-core-router-types/parity-scale-codec",
    "ibc-core-context-types/parity-scale-codec",
    "ibc-app-transfer-types/parity-scale-codec",
]