[package]
name = "ibc-derive"
version = "0.3.0"
license = "Apache-2.0"
readme = "README.md"
description = "Maintained by `ibc-rs`, Macros implementation of #[derive(ClientState)] and #[derive(ConsensusState)]"
repository   = "https://github.com/cosmos/ibc-rs"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2"
proc-macro2 = "1"
quote = "1"
darling = "0.20"
