[package]
name         = "ibc-query"
version      = "0.45.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "cosmos", "ibc", "rpc", "grpc"]
repository   = "https://github.com/cosmos/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.60"
description  = """
    'ibc-query' contains essential IBC query methods and 
    gRPC query service implementations for the IBC core.
"""

[features]
default = ["std"]
std = ["ibc-proto/std", "ibc/std"]

[dependencies]
ibc = { version = "0.45.0", path = "../ibc", default-features = false }
ibc-proto = { version = "0.35.0", default-features = false, features = ["server"] }
displaydoc = { version = "0.2", default-features = false }
tonic = "0.9"