[package]
name         = "ibc-testkit"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
description  = """
    `ibc-testkit` is a versatile library that provides essential abstractions and implementations, 
    fulfilling a dual role of enabling rigorous integration testing for the ibc-rs implementation 
    while also aiding host chains in addressing a broad spectrum of testing scenarios during 
    their integration with ibc-rs.
"""

[dependencies]
bytes = { workspace = true }
derive_more = { workspace = true }
displaydoc = { workspace = true }
parking_lot = { workspace = true }
primitive-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
subtle-encoding = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true }

# ibc dependencies
ibc = { version = "0.47.0" , path = "../ibc" }

# cosmos dependencies
tendermint = { workspace = true }
tendermint-testgen = { workspace = true }

[dev-dependencies]
env_logger = "0.10.0"
rstest = "0.18.1"
tracing-subscriber = { version = "0.3.14", features = ["fmt", "env-filter", "json"]}
test-log = { version = "0.2.10", features = ["trace"] }

[features]
default = ["std"]
std = [
    "ibc/std",
    "tracing/std",
    "prost/std",
    "serde/std",
    "serde_json/std",
]

# This feature is required for token transfer (ICS-20)
serde = ["dep:serde", "ibc/serde", "serde_json"]