[package]
name         = "ibc-testkit"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
description  = """
    `ibc-testkit` is a versatile library that provides essential abstractions and implementations, 
    fulfilling a dual role of enabling rigorous integration testing for the `ibc-rs` implementation 
    while also aiding host chains in addressing a broad spectrum of testing scenarios during 
    their integration with `ibc-rs`.
"""

[dependencies]
# external dependencies
bytes = { workspace = true }
derive_more = { workspace = true }
displaydoc = { workspace = true }
parking_lot = { workspace = true }
primitive-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
subtle-encoding = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true }

# ibc dependencies
ibc = { version = "0.47.0", path = "../ibc" } # NOTE: since `ibc-testkit` does not well support `no_std` yet, we keep `ibc` default features enabled
ibc-app-transfer = { version = "0.47.0", path = "../ibc-apps/transfer", default-features = false}

# cosmos dependencies
tendermint = { workspace = true }
tendermint-testgen = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
rstest =  { workspace = true }
tracing-subscriber = { workspace = true }
test-log = { workspace = true }

[features]
default = ["std"]
std = [
    "ibc/std",
    "ibc-app-transfer/std",
    "tracing/std",
    "prost/std",
    "serde/std",
    "serde_json/std",
]

# This feature is required for token transfer (ICS-20)
serde = ["dep:serde", "ibc/serde", "serde_json", "ibc-app-transfer/serde"]
