[package]
name         = "ibc-testkit"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
description  = """
    Maintained by `ibc-rs`, serves as a versatile library that provides essential abstractions 
    and implementations, fulfilling a dual role of enabling rigorous integration testing for
    the `ibc-rs` implementation while also aiding host chains in addressing a broad spectrum 
    of testing scenarios during their integration with `ibc-rs`.
"""

[dependencies]
# external dependencies
bytes             = { workspace = true }
derive_more       = { workspace = true }
displaydoc        = { workspace = true }
parking_lot       = { workspace = true }
primitive-types   = { workspace = true }
prost             = { workspace = true }
serde             = { workspace = true, optional = true }
serde_json        = { workspace = true, optional = true }
subtle-encoding   = { workspace = true }
tracing           = { workspace = true }
typed-builder     = { workspace = true }

# ibc dependencies
ibc               = { workspace = true, features = ["std"] }
ibc-app-transfer  = { workspace = true, features = ["serde"] }
ibc-proto         = { workspace = true }


# cosmos dependencies
tendermint         = { workspace = true }
tendermint-testgen = { workspace = true }

[dev-dependencies]
env_logger         = { workspace = true }
rstest             = { workspace = true }
tracing-subscriber = { workspace = true }
test-log           = { workspace = true }

[features]
default = ["std"]
std = [
    "ibc/std",
    "ibc-app-transfer/std",
    "tracing/std",
    "prost/std",
    "serde/std",
    "serde_json/std",
]
serde = [
    "dep:serde",
    "ibc/serde",
    "serde_json",
]
