[package]
name         = "ibc"
version      = "0.47.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/cosmos/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.60"
description  = """
    Implementation of the Inter-Blockchain Communication Protocol (IBC).
    This crate comprises the main data structures and on-chain logic.
"""

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = [
    "ibc-proto/std",
    "ics23/std",
    "serde/std",
    "tracing/std",
    "prost/std",
    "bytes/std",
    "subtle-encoding/std",
    "serde_json/std",
    "sha2/std",
    "displaydoc/std",
    "num-traits/std",
    "uint/std",
    "primitive-types/std",
    "tendermint/clock",
    "tendermint/std",
]
parity-scale-codec = ["dep:parity-scale-codec", "dep:scale-info", "ibc-proto/parity-scale-codec"]
borsh = ["dep:borsh", "ibc-proto/borsh"]

# This feature is required for token transfer (ICS-20)
serde = ["dep:serde", "dep:serde_derive", "serde_json", "ibc-proto/serde", "ics23/serde"]

# CosmWasm message API generator compatible, should not be inside on chain code
schema = ["dep:schemars", "ibc-proto/json-schema", "serde", "std"]

# This feature provides access to utility implementations for IBC types,
# specifically designed for testing purposes
test-utils = ["typed-builder"]

[dependencies]
# Proto definitions for all IBC-related interfaces, e.g., connections or channels.
ibc-proto = { version = "0.38.0", default-features = false }
ics23 = { version = "0.11", default-features = false, features = ["host-functions"] }
time = { version = ">=0.3.0, <0.3.31", default-features = false }
serde_derive = { version = "1.0", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }
serde_json =  { package = "serde-json-wasm", version = "1.0.0" , default-features = false, optional = true}
tracing = { version = "0.1.40", default-features = false }
prost = { version = "0.12", default-features = false }
bytes = { version = "1.5.0", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
displaydoc = { version = "0.2", default-features = false }
num-traits = { version = "0.2.17", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "display", "try_into"] }
uint = { version = "0.9", default-features = false }
primitive-types = { version = "0.12.2", default-features = false, features = ["serde_no_std"] }

## for codec encode or decode
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["full"], optional = true }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"], optional = true }
## for borsh encode or decode
borsh = {version = "0.10", default-features = false, optional = true }
parking_lot = { version = "0.12.1", default-features = false, optional = true }
typed-builder = { version = "0.18.0", optional = true }

ibc-derive = { version = "0.3.0", path = "../ibc-derive" }

schemars = { version = "0.8.15", optional = true }

[dependencies.tendermint]
version = "0.34"
default-features = false

[dependencies.tendermint-proto]
version = "0.34"
default-features = false

[dependencies.tendermint-light-client-verifier]
version = "0.34"
default-features = false
features = ["rust-crypto"]

[dev-dependencies]
env_logger = "0.10.0"
rstest = "0.18.2"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter", "json"]}
test-log = { version = "0.2.13", features = ["trace"] }
tendermint-rpc = { version = "0.34", features = ["http-client", "websocket-client"] }
