[package]
name         = "ibc"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
readme       = "README.md"
description  = """
    Implementation of the Inter-Blockchain Communication Protocol (IBC).
    This crate comprises the main data structures and on-chain logic.
"""

[package.metadata.docs.rs]
all-features = true

[dependencies]
# external dependencies
borsh = { workspace = true, optional = true }
bytes = { workspace = true }
derive_more = { workspace = true }
displaydoc = { workspace = true }
primitive-types = { workspace = true }
prost = { workspace = true }
serde_derive = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json =  { workspace = true, optional = true}
subtle-encoding = { workspace = true, default-features = false }
sha2 = { workspace = true, default-features = false }
time = { workspace = true, default-features = false }
schemars = { workspace = true, optional = true }
typed-builder = { workspace = true, optional = true }
uint = { version = "0.9", default-features = false }

# ibc dependencies
ibc-derive = { version = "0.3.0", path = "../ibc-derive" }
ibc-proto = { workspace = true }
ics23 = { workspace = true, features = ["host-functions"] }

# cosmos dependencies
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
tendermint-light-client-verifier = { workspace = true, features = ["rust-crypto"] }

## parity dependencies
parity-scale-codec = { workspace = true , optional = true }
scale-info = { workspace = true , optional = true }


[dev-dependencies]
ibc-testkit = { version = "0.47.0", path = "../ibc-testkit", default-features = false, features = ["serde"] }
env_logger = { workspace = true }
rstest = { workspace = true }
tracing-subscriber = { workspace = true }
test-log = { workspace = true }
tendermint-rpc = {  workspace = true, features = ["http-client", "websocket-client"] }

[features]
default = ["std"]

std = [
    "ibc-proto/std",
    "ics23/std",
    "serde/std",
    "prost/std",
    "bytes/std",
    "subtle-encoding/std",
    "serde_json/std",
    "sha2/std",
    "displaydoc/std",
    "uint/std",
    "primitive-types/std",
    "tendermint/clock",
    "tendermint/std",
]

parity-scale-codec = ["dep:parity-scale-codec", "dep:scale-info", "ibc-proto/parity-scale-codec"]

borsh = ["dep:borsh", "ibc-proto/borsh"]

# This feature is required for token transfer (ICS-20)
serde = ["dep:serde", "dep:serde_derive", "serde_json", "ibc-proto/serde", "ics23/serde"]

# CosmWasm message API generator compatible, should not be inside on chain code
schema = ["dep:schemars", "ibc-proto/json-schema", "serde", "std"]
